--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ url: ''
 baseurl: 
 
 # Title of the Site
-title: 유레카프로젝트 블로그 만들기
+title: 유레카프로젝트 블로그
 # Description of the Site
 description: 최종 과제 블로그
 # URL of Image of the Site
@@ -41,13 +41,13 @@ google-analytics: UA-163806439-1
 disqus-shortname: dla020501
 
 # Name of the Author
-author-name: Min-seok Lim
+author-name: Kim moongi
 # URL for the Image of the Author
 author-image: profile.jpeg
 # 60 Words About the Author
-author-about: "소속: 국민대학교 소프트웨어융합대학 학과: 소프트웨어학부 학번: 20213068 그저 평범한 국민대생입니다. 잘 부탁드립니다."
+author-about: "20212967 김문기"
 # URL to the Author's Profile (i.e., Github, Twitter, Stackoverflow, etc)
-author-url: https://github.com/dla020501
+author-url: https://github.com/Kimmoongi0320/Kimmoongi0320.github.io
 
 # SASS
 sass:
