--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ heroimage: https://images.pexels.com/photos/220444/pexels-photo-220444.jpeg?auto
 
 # Social Media and Contact
 # If you don't want to use any icon, you can leave them blank.
-email: thedevslot@gmail.com
+email: moongi0320@naver.com
 facebook_username: thedevslot
 twitter_username: thedevslot
 instagram_username: thedevslot
@@ -43,7 +43,7 @@ disqus-shortname: dla020501
 # Name of the Author
 author-name: Kim moongi
 # URL for the Image of the Author
-author-image: profile.jpeg
+author-image: profile.jpeg.png
 # 60 Words About the Author
 author-about: "20212967 김문기"
 # URL to the Author's Profile (i.e., Github, Twitter, Stackoverflow, etc)
