--- a/_config.yml
+++ b/_config.yml
@@ -38,7 +38,7 @@ spotify_username: /
 google-analytics: UA-163806439-1
 
 # Disqus
-disqus-shortname: dla020501
+disqus-shortname: Kimmoongi0320.github.io
 
 # Name of the Author
 author-name: Kim moongi
